--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
     { "source": "/ingest/static/:path*", "destination": "https://us-assets.i.posthog.com/static/:path*" },
     { "source": "/ingest/:path*", "destination": "https://us.i.posthog.com/:path*" }
   ],
+  {
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
+},
   "headers": [
     {
       "source": "/",
